--- a/css_file/34.css
+++ b/css_file/34.css
@@ -1,7 +1,19 @@
- html,
- body {
-     margin: 0;
-     padding: 0;
-     height: 100%;
-     width: 100%;
- }
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+
+
+ul {
+    display: flex;
+
+}
+
+ul li {
+    list-style-type: none;
+    background-color: grey;
+}
