--- a/css_file/38.CSS
+++ b/css_file/38.CSS
@@ -12,7 +12,7 @@ body {
 
 nav {
     display: flex;
-    background: cyan;
+    background: rgb(182, 239, 239);
     justify-content: space-evenly;
 }
 
