--- a/Dom manipulation/style.css
+++ b/Dom manipulation/style.css
@@ -2,20 +2,19 @@
     background-color: teal;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 450px;
-    height: 10px;
-    row-gap: 10px;
+    height: 100px;
+    margin: 20px;
+    padding: 20px;
 }
 
 .box {
-    width: 100px;
-    height: 100px;
-    background-color: white;
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
 
+    display: flex;
+    background-color: white;
+    border: 4px solid black;
+    height: 8ch;
+    width: 8ch;
 }
